src/objects/Campaign_List_Generation__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Campaign_Allocation__c</fullName>
        <label>Additional Campaign Allocation</label>
        <summarizedField>Campaign_List_Additional_Campaigns__c.Percentage__c</summarizedField>
        <summaryForeignKey>Campaign_List_Additional_Campaigns__c.Campaign_List_Generation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Batch_Id__c</fullName>
        <label>Batch Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign List Generation</relationshipLabel>
        <relationshipName>Campaign_List_Generation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Members_Selected__c</fullName>
        <label>Members Selected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Memebers_Added__c</fullName>
        <label>Members Added</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <defaultValue>100</defaultValue>
        <inlineHelpText>If record distribution = &quot;Percentage&quot; then us this field to determine the percentage of records that are allocated to the primary campaign.</inlineHelpText>
        <label>Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Distribution__c</fullName>
        <inlineHelpText>Determines how members are added to multiple campaigns. Automatic = evenly distributed, percentage uses the percentage value to determine distribution.</inlineHelpText>
        <label>Record Distribution</label>
        <picklist>
            <picklistValues>
                <fullName>Automatic</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Use Percentage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Response_Fields__c</fullName>
        <label>Response Fields</label>
        <summaryFilterItems>
            <field>Campaign_List_Generation_Criteria__c.Object__c</field>
            <operation>equals</operation>
            <value>CampaignResponse</value>
        </summaryFilterItems>
        <summaryForeignKey>Campaign_List_Generation_Criteria__c.Campaign_List_Generation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transaction_Fields__c</fullName>
        <label>Transaction Fields</label>
        <summaryFilterItems>
            <field>Campaign_List_Generation_Criteria__c.Object__c</field>
            <operation>equals</operation>
            <value>Transaction</value>
        </summaryFilterItems>
        <summaryForeignKey>Campaign_List_Generation_Criteria__c.Campaign_List_Generation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Campaign List Generation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CL-{000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign List Generation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Allocation_Incorrect</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Record_Distribution__c , &apos;Use Percentage&apos;)  &amp;&amp; ( ( Additional_Campaign_Allocation__c +  Percentage__c) &lt;&gt; 100)</errorConditionFormula>
        <errorMessage>The total allocation must add up to 100% when the distribution method is Percentage</errorMessage>
    </validationRules>
</CustomObject>